# novascale-auth

./: .gitignore  README.md  main.py  models.py  pyproject.toml
app/: database.py  deeps.py  main.py
app/api/v1/: auth.py
app/ml/: anomaly.py
app/models/: orm.py  schemas.py
app/services/: auth_service.py
tests/: test_auth.py
