[project]
name = "novascale-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt<4.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.9",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "logfire[fastapi,sqlalchemy]>=4.19.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.logfire]
ignore_no_config = true
